--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   location: ^3.0.0
   google_map_location_picker: ^3.3.5
   latlong: ^0.6.1
+  rounded_loading_button: ^1.0.13
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -57,6 +58,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/splash_icon.png
+    - lib/assets/bus-stop.png
   #     - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
