--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
   assets:
     - lib/assets/splash_icon.png
     - lib/assets/bus-stop.png
+    - lib/assets/LogoMakr_5kyBYK.png
   #     - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
