--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - lib/assets/bus-stop.png
     - lib/assets/LogoMakr_5kyBYK.png
     - lib/assets/bus_stop_yellow.png
+    - lib/assets/map_style.txt
   #     - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
