--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_map_location_picker: ^3.3.5
   latlong: ^0.6.1
   rounded_loading_button: ^1.0.13
+  empty_widget: ^0.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
